--- a/HomeWork_2/app/build.gradle
+++ b/HomeWork_2/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
     implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'com.github.woxthebox:draglistview:1.6.6'
 }
