--- a/gradle.properties
+++ b/gradle.properties
@@ -13,3 +13,9 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+android.useAndroidX=true
+android.enableJetifier=true
+
+trello.apiKey="8853359c9628eb2c50e8db44680e2967"
+trello.baseUrl="https://trello.com/1/"
+trello.urlCallback="https://trello_fintech.com/auth_callback"
