--- a/app/build.gradle
+++ b/app/build.gradle
@@ -13,6 +13,10 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+
+        buildConfigField "String", "TRELLO_API_KEY", project.property("trello.apiKey")
+        buildConfigField "String", "TRELLO_BASE_URL", project.property("trello.baseUrl")
+        buildConfigField "String", "TRELLO_URL_CALLBACK", project.property("trello.urlCallback")
     }
     buildTypes {
         release {
@@ -22,14 +26,26 @@ android {
     }
 }
 
+ext {
+    retrofit2_version = '2.6.2'
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta05'
-    implementation 'com.google.android.material:material:1.1.0-beta01'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
+    implementation 'com.google.android.material:material:1.2.0-alpha01'
     implementation 'com.github.woxthebox:draglistview:1.6.6'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit2_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit2_version"
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
+    annotationProcessor 'androidx.annotation:annotation:1.1.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 }
