--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
 
 ext {
     retrofit2_version = '2.6.2'
+    dagger2_version = '2.25.2'
 }
 
 dependencies {
@@ -53,8 +54,10 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.1.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+    implementation "com.google.dagger:dagger:$dagger2_version"
     
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
     annotationProcessor 'androidx.annotation:annotation:1.1.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    kapt "com.google.dagger:dagger-compiler:$dagger2_version"
 }
