--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,11 +39,11 @@ ext {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc01'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc02'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0-rc01'
-    implementation 'com.google.android.material:material:1.2.0-alpha01'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.github.woxthebox:draglistview:1.6.6'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.4.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
@@ -55,9 +55,12 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-reactivestreams:2.1.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     implementation "com.google.dagger:dagger:$dagger2_version"
-    
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
+    implementation 'com.google.android:flexbox:2.0.0'
+
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
-    annotationProcessor 'androidx.annotation:annotation:1.1.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    kapt 'androidx.annotation:annotation:1.1.0'
+    kapt 'com.android.databinding:compiler:3.1.4'
+    kapt 'com.github.bumptech.glide:compiler:4.10.0'
     kapt "com.google.dagger:dagger-compiler:$dagger2_version"
 }
