--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,7 @@ dependencies {
     implementation "com.google.dagger:dagger:$dagger2_version"
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
     implementation 'com.google.android:flexbox:2.0.0'
+    implementation 'com.daimajia.numberprogressbar:library:1.4@aar'
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
     kapt 'androidx.annotation:annotation:1.1.0'
