--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,8 @@
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
 org.gradle.jvmargs=-Xmx1536m
+org.gradle.parallel=true
+org.gradle.daemon=true
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
@@ -19,3 +21,8 @@ android.enableJetifier=true
 trello.apiKey="8853359c9628eb2c50e8db44680e2967"
 trello.baseUrl="https://trello.com/1/"
 trello.urlCallback="https://trello_fintech.com/auth_callback"
+
+opentok.serverBaseUrl="https://opentok-server13.herokuapp.com/"
+
+firebase.cloudMessagingServerUrl="https://fcm.googleapis.com/fcm/"
+firebase.cloudMessagingServerKey="AAAAXX_u8KE:APA91bEwGrN1i4XCocgN3Wjg4u1Q7d2rkBvQY3fSH-yelaRpzG7U1G25iE4MutVDby4xgPGcjNSDsySb4DVcpNcRjE5_uvi_jzyA5W2pqzbwdb6uh7u28yVORO70M6xxHhlw1_iaUPaK"
