--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CAMERA"/>
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
             android:name=".Application"
@@ -24,12 +25,15 @@
         <activity android:name=".activities.GanttChartActivity"/>
         <activity android:name=".activities.VideoCallActivity"
                   android:screenOrientation="portrait" />
+
         <service android:name=".services.FCMReceiverService"
                  android:exported="false">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT"/>
             </intent-filter>
         </service>
+
+        <receiver android:name="com.project.trello_fintech.services.NotificationService"/>
     </application>
 
 </manifest>
