--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,7 +78,8 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-messaging:20.1.0'
-    implementation 'com.google.firebase:firebase-database:19.2.1'
+    implementation 'com.google.firebase:firebase-firestore:21.4.0'
+//    implementation 'com.google.firebase:firebase-database:19.2.1'
 
     implementation 'com.opentok.android:opentok-android-sdk:2.16.4'
 
